--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
 <body>
     <h3>Contact details</h3>
     <ul>
-        <li><b>mobile:</b>8328102977</li>
-        <li><b>mail:</b>beluresanket@gmail.com</li>
+        <li><b>mobile:</b>123456789</li>
+        <li><b>mail:</b>abc@gmail.com</li>
     </ul>
     <hr>
-    <form action="mailto:beluresanket@gmail.com" enctype="text/plain">
+    <form>
         <label>Your name:</label>
         <input type="text" name="your name"><br>
         <label for="">Enter email:</label>
