--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sanket perosnal site</title>
+    <link rel="stylesheets" href="styles.css">
   </head>
   <body>
     <table cellspacing="20">
